# Dayta

./: .gitignore  README.md  data.db  database.py  pyproject.toml
data/: data.db  main.py
src/kaiz/: database.py  main.py
